Shopify/force-app/main/default/objects/Json_Object_Mapping__c/Json_Object_Mapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Json Object Mapping</label>
</CustomObject>