Shopify/force-app/main/default/objects/Json_Object_Mapping__c/fields/Json_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Json_Object_Name__c</fullName>
    <label>Json Object Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>