Shopify/force-app/main/default/objects/Json_Object_Mapping__c/fields/SF_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>SF_Object_Name__c</fullName>
    <label>SF Object Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>